[tool.poetry]
name = "navi_list"
version = "0.1.0"
description = "Gerenciador de tarefas"
authors = ["Nayane Mazaro <npmazaro@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "backend" }
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "^0.120.1"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
pydantic = "^2.12.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
